fix --tempfile handling

fixes the handling both for Kate & KWrite

simplifies it to just deleting the files on application exit

this avoids any complex bookkeeping and ensures we really just
delete 1:1 the files passed to the command line that got the

--tempfile

option

BUG: 442979